--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-app",
+  "homepage": "https://joebost.github.io/",
+  "name": "joebost",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,8 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "release": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://joebost.github.io/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
